--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
+.tic-tac-toe-container {
+    margin: 0 auto;
+    width: 70%;
+    height: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+}
 table, th, td {
     border: 1px solid black;
     padding: 40px;
+    margin: 0 auto;
   }
 
   .restart-game-button {
